2007-10-20	Daniel Berger	<djberg96@gmail.com>

	* lib/rubygems/uninstaller.rb: Changed '.cmd' to '.bat' in the
	remove_executables method for MS Windows. Patch from Luis Lavena.

2007-10-18  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/rubygems_version.rb: 0.9.4.6 beta.

2007-10-19  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/update_command.rb: Don't install with
	dependencies when updating.  This is a hack.

2007-10-19  Daniel Berger  <djberg96@gmail.com>

	* setup.rb: gem.cmd stub is now gem.cmd, and the stub generation was
	changed - now better for NT. Patch #14725 (Luis Lavena).
	* lib/rubygems/installer.rb: Same as for setup.rb.

2007-10-18  Daniel Berger  <djberg96@gmail.com>

	* lib/rubygems/platform.rb: Modified the Platform.local method for MS
	Windows for versions built with VC++ 6. Patch #14727 (Luis Lavena).
	* test/test_gem_specification.rb: Added version independent tests for
	MS Windows. Patch #14727 (Luis Lavena).

2007-10-18  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/remote_fetcher.rb: Add platform to User-Agent.
	* lib/rubygems/commands/install_command.rb: Fix typo.  Debian bug
	#443135 submitted by Reuben Thomas.
	* lib/rubygems/dependency_installer.rb: Don't install dropped
	dependencies.  Fixes bug #14724 submitted by Luis Lavena.

2007-10-17  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/update_command.rb: Unset RUBYOPT when running
	setup.rb
	* setup.rb: Re-exec without RUBYOPT if it is set.  Fixes bug #14683
	submitted by Lyle Johnson.

2007-10-16  Daniel Berger  <djberg96@gmail.com>

	* lib/rubygems/indexer/abstract_index_builder.rb: The compress method
	now does a binary read to make MS Windows happy.

2007-10-16  Eric Hodel  <drbrain@segment7.net>

	* setup.rb: Installs bin stubs that warn when you try to use the old
	commands.  Simple mswin deprecation stubs by Luis Lavena.

2007-10-12  Eric Hodel  <drbrain@segment7.net>

	* setup.rb: Remove source caches on install.