@@ -18,6 +18,11 @@ class TestGemPlatform < RubyGemTestCase
     assert Gem::Platform.match(Gem::Platform::RUBY), 'ruby'
   end
 
+  def test_self_new
+    assert_equal Gem::Platform::RUBY, Gem::Platform.new(Gem::Platform::RUBY)
+    assert_equal Gem::Platform::RUBY, Gem::Platform.new(nil)
+  end
+
   def test_initialize
     test_cases = {
       'amd64-freebsd6'         => ['amd64',     'freebsd',   '6'],
